@@ -3,6 +3,7 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.contingency;
 
@@ -12,11 +13,7 @@ import com.powsybl.iidm.modification.NetworkModification;
 import com.powsybl.iidm.modification.NetworkModificationList;
 import com.powsybl.iidm.network.Identifiable;
 import com.powsybl.iidm.network.Network;
-import com.powsybl.iidm.network.test.DanglingLineNetworkFactory;
-import com.powsybl.iidm.network.test.EurostagTutorialExample1Factory;
-import com.powsybl.iidm.network.test.HvdcTestNetwork;
-import com.powsybl.iidm.network.test.SvcTestCaseFactory;
-import com.powsybl.iidm.network.test.ThreeWindingsTransformerNetworkFactory;
+import com.powsybl.iidm.network.test.*;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
@@ -24,9 +21,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * @author Mathieu Bague {@literal <mathieu.bague at rte-france.com>}
@@ -50,7 +45,7 @@ class ContingencyTest {
         assertEquals(ContingencyElementType.GENERATOR, elements.get(1).getType());
 
         NetworkModification modification = contingency.toModification();
-        assertTrue(modification instanceof NetworkModificationList);
+        assertInstanceOf(NetworkModificationList.class, modification);
 
         ContingencyElement bbsElement = new BusbarSectionContingency("bbs");
         contingency.addElement(bbsElement);
@@ -76,7 +71,7 @@ class ContingencyTest {
         List<String> expectedValidIds = Arrays.asList("GEN contingency", "NHV1_NHV2_1 contingency");
 
         assertEquals(expectedValidIds,
-                validContingencies.stream().map(Contingency::getId).collect(Collectors.toList()));
+                validContingencies.stream().map(Contingency::getId).toList());
 
         assertEquals(expectedValidIds,
                 ContingencyList.getValidContingencies(Arrays.asList(generatorContingency, generatorInvalidContingency, lineContingency, lineInvalidContingency), network)
@@ -220,5 +215,48 @@ class ContingencyTest {
         ContingencyBuilder contingencyBuilder = Contingency.builder("Invalid contingency");
         PowsyblException exception = assertThrows(PowsyblException.class, () -> contingencyBuilder.addIdentifiable("Unknown", network));
         assertEquals("Element Unknown has not been found in the network", exception.getMessage());
+    }
+
+    @Test
+    void testWithName() {
+        ContingencyElement bbsElement = new BusbarSectionContingency("bbs");
+        Contingency contingency = new Contingency("test", "testName", bbsElement);
+        assertEquals("testName", contingency.getName().orElse(null));
+
+        Contingency contingency2 = new Contingency("test2", "testName2");
+        assertEquals("testName2", contingency2.getName().orElse(null));
+
+        Contingency contingency3 = Contingency.builder("test3").addName("testName3").build();
+        assertEquals("testName3", contingency3.getName().orElse(null));
+
+        Contingency contingency4 = Contingency.builder("test4").addGenerator("GEN").addName("testName4").build();
+        assertEquals("testName4", contingency4.getName().orElse(null));
+    }
+
+    @Test
+    void testEquals() {
+        //Contingency id is probably enough to identify a specific contingency, so this test evaluates the current behavior of the equals, but it can evolve
+        Contingency co1 = new Contingency("co", "coName", new BusbarSectionContingency("bbs"), new LineContingency("l", "vl"));
+
+        assertEquals(co1, new Contingency("co", "coName", new BusbarSectionContingency("bbs"), new LineContingency("l", "vl")));
+
+        // diff in id
+        assertNotEquals(co1, new Contingency("co2", "coName", new BusbarSectionContingency("bbs"), new LineContingency("l", "vl")));
+        // diff in name
+        assertNotEquals(co1, new Contingency("co", "coName2", new BusbarSectionContingency("bbs"), new LineContingency("l", "vl")));
+        // without name
+        assertNotEquals(co1, new Contingency("co", new BusbarSectionContingency("bbs"), new LineContingency("l", "vl")));
+        // without elements
+        assertNotEquals(co1, new Contingency("co", "coName"));
+        // change elements list order
+        assertNotEquals(co1, new Contingency("co", "coName", new LineContingency("l", "vl"), new BusbarSectionContingency("bbs")));
+        // duplicate elements
+        assertNotEquals(co1, new Contingency("co", "coName", new BusbarSectionContingency("bbs"), new LineContingency("l", "vl"), new LineContingency("l", "vl")));
+        // change elements type
+        assertNotEquals(co1, new Contingency("co", "coName", new GeneratorContingency("bbs"), new LineContingency("l", "vl")));
+        // change elements id
+        assertNotEquals(co1, new Contingency("co", "coName", new BusbarSectionContingency("bbs2"), new LineContingency("l", "vl")));
+        // change elements voltage id
+        assertNotEquals(co1, new Contingency("co", "coName", new BusbarSectionContingency("bbs"), new LineContingency("l", "vl2")));
     }
 }
