@@ -3,6 +3,7 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.iidm.serde.extensions;
 
@@ -23,7 +24,6 @@ import org.junit.jupiter.api.Test;
 import java.io.IOException;
 import java.time.ZonedDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static com.powsybl.iidm.serde.IidmSerDeConstants.CURRENT_IIDM_VERSION;
@@ -37,7 +37,7 @@ class BranchObservabilityXmlTest extends AbstractIidmSerDeTest {
     private static List<IidmVersion> fromMinToCurrentVersion(IidmVersion min) {
         return Stream.of(IidmVersion.values())
                 .filter(v -> v.compareTo(min) >= 0)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Test
