@@ -3,11 +3,11 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.psse.converter;
 
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableList;
 import com.powsybl.commons.datasource.DataSource;
 import com.powsybl.iidm.network.Exporter;
 import com.powsybl.iidm.network.*;
@@ -39,10 +39,10 @@ public class PsseExporter implements Exporter {
 
     @Override
     public List<Parameter> getParameters() {
-        return Collections.unmodifiableList(STATIC_PARAMETERS);
+        return STATIC_PARAMETERS;
     }
 
-    private static final List<Parameter> STATIC_PARAMETERS = ImmutableList.of();
+    private static final List<Parameter> STATIC_PARAMETERS = List.of();
 
     @Override
     public String getFormat() {
@@ -61,83 +61,71 @@ public class PsseExporter implements Exporter {
         PssePowerFlowModel updatePsseModel = createUpdatePsseModel(network, psseModel);
 
         Context context = network.getExtension(PsseConversionContextExtension.class).getContext();
+        PsseVersion version = PsseVersion.fromRevision(updatePsseModel.getCaseIdentification().getRev());
         if (context.getFileFormat() == FileFormat.JSON) {
-            PsseVersion version = PsseVersion.fromRevision(updatePsseModel.getCaseIdentification().getRev());
-            switch (version.major()) {
-                case V35:
-                    PowerFlowRawxData35 rawXData35 = new PowerFlowRawxData35();
-                    try {
-                        rawXData35.write(updatePsseModel, context, dataSource);
-                    } catch (IOException e) {
-                        throw new UncheckedIOException(e);
-                    }
-                    break;
-                default:
-                    throw new PsseException("Unsupported version " + version);
+            if (Objects.requireNonNull(version.major()) == PsseVersion.Major.V35) {
+                PowerFlowRawxData35 rawXData35 = new PowerFlowRawxData35();
+                try {
+                    rawXData35.write(updatePsseModel, context, dataSource);
+                } catch (IOException e) {
+                    throw new UncheckedIOException(e);
+                }
+            } else {
+                throw new PsseException("Unsupported version " + version);
             }
         } else {
-            PsseVersion version = PsseVersion.fromRevision(updatePsseModel.getCaseIdentification().getRev());
-            switch (version.major()) {
-                case V35:
-                    PowerFlowRawData35 rawData35 = new PowerFlowRawData35();
-                    try {
-                        rawData35.write(updatePsseModel, context, dataSource);
-                    } catch (IOException e) {
-                        throw new UncheckedIOException(e);
-                    }
-                    break;
-                case V33:
-                    PowerFlowRawData33 rawData33 = new PowerFlowRawData33();
-                    try {
-                        rawData33.write(updatePsseModel, context, dataSource);
-                    } catch (IOException e) {
-                        throw new UncheckedIOException(e);
-                    }
-                    break;
-                case V32:
-                    PowerFlowRawData32 rawData32 = new PowerFlowRawData32();
-                    try {
-                        rawData32.write(updatePsseModel, context, dataSource);
-                    } catch (IOException e) {
-                        throw new UncheckedIOException(e);
-                    }
-                    break;
-                default:
-                    throw new PsseException("Unsupported version " + version);
-            }
+            exportNotJson(context, updatePsseModel, version, dataSource);
         }
     }
 
+    private void exportNotJson(Context context, PssePowerFlowModel updatePsseModel, PsseVersion version, DataSource dataSource) {
+        switch (version.major()) {
+            case V35:
+                PowerFlowRawData35 rawData35 = new PowerFlowRawData35();
+                try {
+                    rawData35.write(updatePsseModel, context, dataSource);
+                } catch (IOException e) {
+                    throw new UncheckedIOException(e);
+                }
+                break;
+            case V33:
+                PowerFlowRawData33 rawData33 = new PowerFlowRawData33();
+                try {
+                    rawData33.write(updatePsseModel, context, dataSource);
+                } catch (IOException e) {
+                    throw new UncheckedIOException(e);
+                }
+                break;
+            case V32:
+                PowerFlowRawData32 rawData32 = new PowerFlowRawData32();
+                try {
+                    rawData32.write(updatePsseModel, context, dataSource);
+                } catch (IOException e) {
+                    throw new UncheckedIOException(e);
+                }
+                break;
+            default:
+                throw new PsseException("Unsupported version " + version);
+        }
+    }
+
+    // New equipment is not supported
+    // Antennas (Branches connected only at one end) are exported as out of service (both sides open)
     private static PssePowerFlowModel createUpdatePsseModel(Network network, PssePowerFlowModel psseModel) {
-        PssePowerFlowModel updatePsseModel = new PssePowerFlowModel(psseModel.getCaseIdentification());
-
-        copyPermanentBlocks(psseModel, updatePsseModel);
-        updateModifiedBlocks(network, psseModel, updatePsseModel);
-        return updatePsseModel;
+        // Only the updated blocks are copied, non-updated blocks are referenced
+        PssePowerFlowModel referencedAndCopiedPsseModel = psseModel.referenceAndCopyPssePowerFlowModel();
+        updateModifiedBlocks(network, referencedAndCopiedPsseModel);
+        return referencedAndCopiedPsseModel;
     }
 
-    private static void copyPermanentBlocks(PssePowerFlowModel psseModel, PssePowerFlowModel updatePsseModel) {
-        updatePsseModel.addAreas(psseModel.getAreas());
-        updatePsseModel.addTwoTerminalDcTransmissionLines(psseModel.getTwoTerminalDcTransmissionLines());
-        updatePsseModel.addVoltageSourceConverterDcTransmissionLines(psseModel.getVoltageSourceConverterDcTransmissionLines());
-        updatePsseModel.addTransformerImpedanceCorrections(psseModel.getTransformerImpedanceCorrections());
-        updatePsseModel.addMultiTerminalDcTransmissionLines(psseModel.getMultiTerminalDcTransmissionLines());
-        updatePsseModel.addLineGrouping(psseModel.getLineGrouping());
-        updatePsseModel.addZones(psseModel.getZones());
-        updatePsseModel.addInterareaTransfer(psseModel.getInterareaTransfer());
-        updatePsseModel.addOwners(psseModel.getOwners());
-        updatePsseModel.addFacts(psseModel.getFacts());
-        updatePsseModel.addGneDevice(psseModel.getGneDevice());
-        updatePsseModel.addInductionMachines(psseModel.getInductionMachines());
-    }
+    private static void updateModifiedBlocks(Network network, PssePowerFlowModel referencedAndCopiedPsseModel) {
 
-    private static void updateModifiedBlocks(Network network, PssePowerFlowModel psseModel, PssePowerFlowModel updatePsseModel) {
-        BusConverter.updateBuses(network, psseModel, updatePsseModel);
-        LoadConverter.updateLoads(network, psseModel, updatePsseModel);
-        FixedShuntCompensatorConverter.updateFixedShunts(network, psseModel, updatePsseModel);
-        GeneratorConverter.updateGenerators(network, psseModel, updatePsseModel);
-        LineConverter.updateLines(network, psseModel, updatePsseModel);
-        TransformerConverter.updateTransformers(network, psseModel, updatePsseModel);
-        SwitchedShuntCompensatorConverter.updateSwitchedShunts(network, psseModel, updatePsseModel);
+        BusConverter.updateBuses(network, referencedAndCopiedPsseModel);
+        LoadConverter.updateLoads(network, referencedAndCopiedPsseModel);
+        FixedShuntCompensatorConverter.updateFixedShunts(network, referencedAndCopiedPsseModel);
+        GeneratorConverter.updateGenerators(network, referencedAndCopiedPsseModel);
+        LineConverter.updateLines(network, referencedAndCopiedPsseModel);
+        TransformerConverter.updateTransformers(network, referencedAndCopiedPsseModel);
+        SwitchedShuntCompensatorConverter.updateSwitchedShunts(network, referencedAndCopiedPsseModel);
     }
 }
