@@ -3,6 +3,7 @@
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ * SPDX-License-Identifier: MPL-2.0
  */
 package com.powsybl.timeseries;
 
@@ -19,9 +20,7 @@ import java.nio.ByteBuffer;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -55,13 +54,13 @@ class StringDataChunkTest {
         ObjectMapper objectMapper = JsonUtil.createObjectMapper()
                 .registerModule(new TimeSeriesJsonModule());
 
-        List<StringDataChunk> chunks = objectMapper.readValue(objectMapper.writeValueAsString(Arrays.asList(chunk)),
+        List<StringDataChunk> chunks = objectMapper.readValue(objectMapper.writeValueAsString(List.of(chunk)),
                                                                TypeFactory.defaultInstance().constructCollectionType(List.class, StringDataChunk.class));
         assertEquals(1, chunks.size());
         assertEquals(chunk, chunks.get(0));
 
         // check base class (DataChunk) deserializer
-        assertTrue(objectMapper.readValue(objectMapper.writeValueAsString(chunk), DataChunk.class) instanceof StringDataChunk);
+        assertInstanceOf(StringDataChunk.class, objectMapper.readValue(objectMapper.writeValueAsString(chunk), DataChunk.class));
 
         // stream test
         RegularTimeSeriesIndex index = RegularTimeSeriesIndex.create(Interval.parse("2015-01-01T00:00:00Z/2015-01-01T00:45:00Z"),
@@ -69,14 +68,14 @@ class StringDataChunkTest {
         assertEquals(ImmutableList.of(new StringPoint(1, Instant.parse("2015-01-01T00:15:00Z").toEpochMilli(), "a"),
                                       new StringPoint(2, Instant.parse("2015-01-01T00:30:00Z").toEpochMilli(), "b"),
                                       new StringPoint(3, Instant.parse("2015-01-01T00:45:00Z").toEpochMilli(), "c")),
-                chunk.stream(index).collect(Collectors.toList()));
+                chunk.stream(index).toList());
     }
 
     @Test
     void compressTest() throws IOException {
         UncompressedStringDataChunk chunk = new UncompressedStringDataChunk(1, new String[] {"aaa", "bbb", "bbb", "bbb", "bbb", "ccc"});
         StringDataChunk maybeCompressedChunk = chunk.tryToCompress();
-        assertTrue(maybeCompressedChunk instanceof CompressedStringDataChunk);
+        assertInstanceOf(CompressedStringDataChunk.class, maybeCompressedChunk);
         CompressedStringDataChunk compressedChunk = (CompressedStringDataChunk) maybeCompressedChunk;
         assertEquals(1, compressedChunk.getOffset());
         assertEquals(6, compressedChunk.getLength());
@@ -101,7 +100,7 @@ class StringDataChunkTest {
         assertEquals(ImmutableList.of(new StringPoint(1, Instant.parse("2015-01-01T00:15:00Z").toEpochMilli(), "aaa"),
                                       new StringPoint(2, Instant.parse("2015-01-01T00:30:00Z").toEpochMilli(), "bbb"),
                                       new StringPoint(6, Instant.parse("2015-01-01T01:30:00Z").toEpochMilli(), "ccc")),
-                     compressedChunk.stream(index).collect(Collectors.toList()));
+                     compressedChunk.stream(index).toList());
     }
 
     @Test
@@ -127,10 +126,10 @@ class StringDataChunkTest {
         assertNotNull(split.getChunk1());
         assertNotNull(split.getChunk2());
         assertEquals(1, split.getChunk1().getOffset());
-        assertTrue(split.getChunk1() instanceof UncompressedStringDataChunk);
+        assertInstanceOf(UncompressedStringDataChunk.class, split.getChunk1());
         assertArrayEquals(new String[] {"a"}, ((UncompressedStringDataChunk) split.getChunk1()).getValues());
         assertEquals(2, split.getChunk2().getOffset());
-        assertTrue(split.getChunk2() instanceof UncompressedStringDataChunk);
+        assertInstanceOf(UncompressedStringDataChunk.class, split.getChunk2());
         assertArrayEquals(new String[] {"b", "c"}, ((UncompressedStringDataChunk) split.getChunk2()).getValues());
     }
 
@@ -154,12 +153,12 @@ class StringDataChunkTest {
         assertNotNull(split.getChunk1());
         assertNotNull(split.getChunk2());
         assertEquals(1, split.getChunk1().getOffset());
-        assertTrue(split.getChunk1() instanceof CompressedStringDataChunk);
+        assertInstanceOf(CompressedStringDataChunk.class, split.getChunk1());
         assertEquals(3, ((CompressedStringDataChunk) split.getChunk1()).getUncompressedLength());
         assertArrayEquals(new String[] {"a", "b"}, ((CompressedStringDataChunk) split.getChunk1()).getStepValues());
         assertArrayEquals(new int[] {2, 1}, ((CompressedStringDataChunk) split.getChunk1()).getStepLengths());
         assertEquals(4, split.getChunk2().getOffset());
-        assertTrue(split.getChunk2() instanceof CompressedStringDataChunk);
+        assertInstanceOf(CompressedStringDataChunk.class, split.getChunk2());
         assertEquals(2, ((CompressedStringDataChunk) split.getChunk2()).getUncompressedLength());
         assertArrayEquals(new String[] {"b"}, ((CompressedStringDataChunk) split.getChunk2()).getStepValues());
         assertArrayEquals(new int[] {2}, ((CompressedStringDataChunk) split.getChunk2()).getStepLengths());
@@ -174,7 +173,7 @@ class StringDataChunkTest {
         //Merge chunk1 + chunk2
         StringDataChunk merge = chunk1.append(chunk2);
         assertNotNull(merge);
-        assertTrue(merge instanceof UncompressedStringDataChunk);
+        assertInstanceOf(UncompressedStringDataChunk.class, merge);
         assertEquals(1, merge.getOffset());
         assertArrayEquals(new String[] {"a", "b", "c", "d", "e", "f", "g"}, ((UncompressedStringDataChunk) merge).getValues());
 
@@ -196,7 +195,7 @@ class StringDataChunkTest {
         //Merge chunk1 + chunk2
         StringDataChunk merge = chunk1.append(chunk2);
         assertNotNull(merge);
-        assertTrue(merge instanceof CompressedStringDataChunk);
+        assertInstanceOf(CompressedStringDataChunk.class, merge);
         assertEquals(1, merge.getOffset());
         assertEquals(10, merge.getLength());
         assertArrayEquals(new String[] {"a", "b", "c", "d"}, ((CompressedStringDataChunk) merge).getStepValues());
@@ -205,7 +204,7 @@ class StringDataChunkTest {
         //Merge chunk2 + chunk3
         merge = chunk2.append(chunk3);
         assertNotNull(merge);
-        assertTrue(merge instanceof CompressedStringDataChunk);
+        assertInstanceOf(CompressedStringDataChunk.class, merge);
         assertEquals(6, merge.getOffset());
         assertEquals(8, merge.getLength());
         assertArrayEquals(new String[] {"c", "d", "e"}, ((CompressedStringDataChunk) merge).getStepValues());
@@ -235,7 +234,7 @@ class StringDataChunkTest {
         });
         assertEquals(0, doubleChunks.size());
         assertEquals(1, stringChunks.size());
-        assertTrue(stringChunks.get(0) instanceof UncompressedStringDataChunk);
+        assertInstanceOf(UncompressedStringDataChunk.class, stringChunks.get(0));
         assertArrayEquals(new String[] {"a", null, null}, ((UncompressedStringDataChunk) stringChunks.get(0)).getValues());
     }
 }
